--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "prettier": "^2.8.8"
+    "autoprefixer": "^10.4.17",
+    "gatsby-plugin-postcss": "^6.13.1",
+    "postcss": "^8.4.33",
+    "prettier": "^2.8.8",
+    "tailwindcss": "^3.4.1"
   },
   "keywords": [
     "gatsby"
