--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "gatsby-source-filesystem": "^5.13.1",
     "gatsby-transformer-sharp": "^5.13.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-loading-skeleton": "^3.4.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.17",
